--- a/config/extpipes/extpipes-cli-config.yml
+++ b/config/extpipes/extpipes-cli-config.yml
@@ -45,3 +45,17 @@ rawdbs:
                         email: juliano.marinho@radixeng.com
                         role: Bootcamp 13 Administrator
                         send-notification: false
+
+    - rawdb-name: src:002:opcua:db
+      dataset-external-id: src:002:opcua:ds
+      short-name: opcua
+      rawtables:
+          - rawtable-name: datapoints
+            pipelines:
+                - source: csv
+                  schedule: On trigger
+                  contacts:
+                      - name: Juliano Marinho
+                        email: juliano.marinho@radixeng.com
+                        role: Bootcamp 13 Administrator
+                        send-notification: false
